--- a/discount.html
+++ b/discount.html
@@ -1,6 +1,10 @@
 <h1>Дисконт</h1>
 
 <p>
+<img src="discount1.jpg.jpg" height="100">
+</p>
+
+<p>
 <b>Дисконт</b> (англ. <i>discount</i>) — экономический <b>термин</b>, в буквальном переводе 
 с английского означает <i>скидка</i>,<i>вычет</i>, <i>разница</i>[1]. 
 В зависимости от <b>контекста</b>, может принимать различные значения.
